--- a/html/index.html
+++ b/html/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Welcome to V1 of the web application</h1>
-    <h2>This application will be deployed on Kubernetes.</h2>
+    <h1>Welcome to V0 of the web application</h1>
+    <h2>This application will be deployed on Kubernetes with Spinnaker.</h2>
   </div>
 </body>
 </html>
