testing promotion to prod

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Welcome to V1 of the web application. Now it should end up in spinnaker</h1>
+    <h1>Welcome to test build to be promoted to prod. Now it should end up in prod</h1>
     <h2>This application will be deployed on Kubernetes with Spinnaker.</h2>
   </div>
 </body>
