test promotion, now in dev branch

--- a/html/index.html
+++ b/html/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Welcome to dev web application</h1>
-    <h2>This application will be deployed on Kubernetes in dev env.</h2>
+    <h1>Welcome to dev web application that is about to be promoted to prod</h1>
+    <h2>This application will be deployed on Kubernetes in prod env.</h2>
   </div>
 </body>
 </html>
