--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Welcome to dev web application that is about to be promoted to prod</h1>
+    <h1>Application in development branch</h1>
     <h2>This application will be deployed on Kubernetes in prod env.</h2>
   </div>
 </body>
