--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Application in development branch</h1>
-    <h2>This application will be deployed on Kubernetes in prod env.</h2>
+    <h2>This application will be deployed on Kubernetes in prod env, version 2.0</h2>
   </div>
 </body>
 </html>
